Rename RAG project label

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="grid">
         <article class="card reveal" style="--delay: 0.1s">
-          <h3>RAG API POC</h3>
+          <h3>RAG Project</h3>
           <p>OpenAI-compatible FastAPI service with Qdrant-backed retrieval, safe fallbacks, and tool routing.</p>
           <div class="tags">
             <span>FastAPI</span><span>Qdrant</span><span>RAG</span>
